# linefollower

./: .gitignore  CMakeLists.txt  Makefile  controller.c  controller.h  framework.h  main.c  simulator.c  simulator.h
Environment/: World.env
Source/: CMakeLists.txt  controller.c  controller.h
Source/data/: control.h  light.h  line.h  request.h
Source/module/: behavior_control.c  modeling.h  motor_control.c
Source/robot/: main.c
Source/sim/: DebugView.cpp  MainWindow.cpp  MainWindow.hpp  PropertyView.cpp  PropertyView.hpp  Resources.qrc  SimulationThread.cpp  SimulationThread.hpp  Simulator.cpp  Simulator.hpp  SimulatorCycleBundle.hpp  SimulatorLoadBundle.hpp  Types.hpp  main.cpp
Source/sim/Core/: Environment.cpp  Environment.hpp  Motor.cpp  Motor.hpp  Robot.cpp  Robot.hpp
data/: state.h
module/: behavior_control.c  behavior_control.h  line_perception.c  line_perception.h  modeling.c  motor_control.c  motor_control.h
robot/: main.c
sim/: DebugOutput.cpp  DebugView.cpp  DebugView.hpp  MainWindow.cpp  MainWindow.hpp  PropertyView.cpp  PropertyView.hpp  SceneView.cpp  SceneView.hpp  SimulationThread.cpp  SimulationThread.hpp  Simulator.cpp  Simulator.hpp  SimulatorLoadBundle.hpp  main.c  main.cpp  simulator.c  simulator.h
